--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ethersphere/bee-js": "^10.4.0",
     "axios": "^1.13.4",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
